@@ -14,9 +14,6 @@ import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.Fre
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.NitrogenIonParticle;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.SodiumIonParticle;
 
-import static java.lang.Math.PI;
-import static java.lang.Math.random;
-
 /**
  * This crystal for Sodium Chloride salt updates the positions of the molecules to ensure they move as a crystal
  *
@@ -43,7 +40,7 @@ public class SodiumNitrateCrystal extends Crystal<Particle> {
     private void fill( SodiumNitrateLattice lattice, Component component, ArrayList<Component> handled, ImmutableVector2D relativePosition ) {
 
         if ( component instanceof SodiumIon ) {
-            constituents.add( new Constituent( new SodiumIonParticle(), relativePosition ) );
+            constituents.add( new Constituent<Particle>( new SodiumIonParticle(), relativePosition ) );
         }
         //Nitrate
         else {
@@ -62,33 +59,6 @@ public class SodiumNitrateCrystal extends Crystal<Particle> {
 
     private void addNitrate( NitrateMolecule nitrateMolecule, ImmutableVector2D relativePosition ) {
         nitrateMolecules.add( nitrateMolecule );
-        for ( Constituent<Particle> constituent : nitrateMolecule ) {
-            constituents.add( new Constituent<Particle>( constituent.particle, constituent.location.plus( relativePosition ) ) );
-        }
-    }
-
-    public ArrayList<NitrateMolecule> getNitrateMolecules() {
-        return nitrateMolecules;
-    }
-
-    //Dissolves the sodium nitrate crystal, but keeps the structure of the NO3 molecules
-    public ArrayList<? extends Particle> dissolve() {
-        ArrayList<Particle> freeParticles = new ArrayList<Particle>();
-
-        //Set the sodium ions free
-        for ( Constituent constituent : this ) {
-            constituent.particle.velocity.set( velocity.get().getRotatedInstance( random() * PI * 2 ) );
-            if ( constituent.particle instanceof SodiumIonParticle ) {
-                freeParticles.add( constituent.particle );
-            }
-        }
-
-        //add new compounds for the nitrates so they will remain together
-        for ( final NitrateMolecule nitrateMolecule : getNitrateMolecules() ) {
-            nitrateMolecule.position.set( position.get().plus( nitrateMolecule.position.get() ) );
-            nitrateMolecule.velocity.set( velocity.get().getRotatedInstance( random() * PI * 2 ) );
-            freeParticles.add( nitrateMolecule );
-        }
-        return freeParticles;
+        constituents.add( new Constituent<Particle>( nitrateMolecule, relativePosition ) );
     }
 }
